# finance_bot

./: .coverage  .gitignore  README.md  cspell.config.js  cspell.json  pyproject.toml  requirements.txt  setup.cfg
bot/: .coverage  config.py  database.py  handlers.py  main.py
tests/: __init__.py  conftest.py  test_database.py  test_handlers.py
